ui/styles.css
.vtm20 {
  /* Sheet Tabs */
  /* Items List */
  /* Attributes */
}

@font-face {
  font-family: "Denver Serial Black";
  src: url("../fonts/denver-serial-black-regular.ttf");
}
@font-face {
  font-family: "Goudy Old Style";
  src: url("../fonts/GOUDOS.ttf");
}

/* main sheet window */
.vtm20.sheet.actor {
  min-width: 950px;
  min-height: 420px;
}
.vtm20 .window-content {
  color: #333;
  height: 100%;
  background: white;
  overflow-y: hidden;
}
.vtm20 .window-content > * {
  overflow: hidden;
}

.vtm20.sheet .sheet-window {
  flex: 1;
  display: flex;
  flex-direction: column;
}
.vtm20.sheet .sheet-sidebar {
  margin-top: 4px;
  flex: 0 1 200px;
  border-left: 1px solid #aaa;
}

.vtm20.sheet .row {
  display: flex;
  flex-direction: row;
}

/* sidebar content */
.vtm20 .sheet-sidebar .profile-img {
  flex: 0 0 150px;
}
.vtm20.sheet .sheet-sidebar .actor-name {
  font-weight: bold;
  font-size: 1.25em;
}
.vtm20.sheet .sheet-sidebar .actor-char {
  font-size: 1.1em;
  display: flex;
  justify-content: space-between;
}
.vtm20.sheet .sheet-sidebar .actor-char > span:first-of-type {
  font-family: "Denver Serial Black";
  margin-right: 0.5em;
}

.vtm20 .resource {
  width: 50%;
  height: 40px;
  margin-top: 10px;
  float: left;
  text-align: center;
}
.vtm20 .resource input {
  width: 100px;
  height: 28px;
}
.vtm20 .tabs {
  height: 40px;
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
}
.vtm20 .tabs .item {
  /*line-height: 40px;*/
  font-weight: bold;
}
.vtm20 .tabs .item.active {
  text-decoration: underline;
  text-shadow: none;
}
.vtm20 .sheet-body {
  overflow: hidden;
}
.vtm20 .sheet-body .tab {
  height: 100%;
  overflow-y: auto;
}
.vtm20 .editor,
.vtm20 .editor-content {
  height: 100%;
}
.vtm20 .item-list {
  list-style: none;
  margin: 7px 0;
  padding: 0;
  overflow-y: auto;
}
.vtm20 .item-list .item {
  height: 30px;
  line-height: 24px;
  padding: 3px 0;
  border-bottom: 1px solid #bbb;
}
.vtm20 .item-list .item img {
  flex: 0 0 24px;
  margin-right: 5px;
}
.vtm20 .item-list .item-name {
  margin: 0;
}
.vtm20 .item-list .item-controls {
  flex: 0 0 36px;
}
.vtm20 .attributes-header {
  padding: 5px;
  margin: 5px 0;
  background: rgba(0, 0, 0, 0.05);
  border: 1px solid #aaa;
  border-radius: 2px;
  text-align: center;
  font-weight: bold;
}
.vtm20 .attributes-header .attribute-label {
  flex: 1.5;
}
.vtm20 .attributes-header .attribute-control {
  flex: 0 0 20px;
}
.vtm20 .attributes-list {
  list-style: none;
  margin: 0;
  padding: 0;
}
.vtm20 .attributes-list li > * {
  margin: 0 3px;
  height: 28px;
  line-height: 24px;
  background: transparent;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid #aaa;
}
.vtm20 .attributes-list a.attribute-control {
  flex: 0 0 20px;
  text-align: center;
  line-height: 28px;
  border: none;
}

.vtm20.sheet.item {
  min-width: 460px;
  min-height: 400px;
}

.vtm20.sheet .primary {
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Goudy Old Style";
}
.vtm20.sheet .primary h1,
.vtm20.sheet .primary h2,
.vtm20.sheet .primary h3,
.vtm20.sheet .primary h4 {
  font-family: "Denver Serial Black";
  border-bottom: 0;
}
.vtm20.sheet .sheet-header-big {
  position: relative;
  z-index: 1;
  width: 100%;
  display: flex;
  justify-content: center;
}
.vtm20.sheet .sheet-header-big h1,
.vtm20.sheet .sheet-header-big h2 {
  background: white;
  margin: 0;
  padding: 0.5rem;
}
.vtm20.sheet .sheet-header-big h1:after,
.vtm20.sheet .sheet-header-big h2:after {
  border-bottom: 6px solid #333;
  position: absolute;
  top: 45%;
  z-index: -1;
  content: "";
  width: 96%;
  left: 2%;
}

.vtm20.sheet .primary .column {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.vtm20.sheet .primary ul {
  margin: 0;
  padding: 0 14px;
  list-style-type: none;
}
.vtm20.sheet .primary label {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  width: 160px;
}
.vtm20.sheet input[type="text"]{
    color: #333;
    border-radius: 0;
    border: 0;
    text-align: right;
    background: transparent;
}
.vtm20.sheet input[type="text"]:hover{
    font-weight: 700;
    color: #000;
}
.vtm20.sheet .primary input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
}
.vtm20.sheet .primary input[type="number"] {
  max-width: 40px;
}
.vtm20.sheet .primary-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 1rem;
}
.vtm20.sheet .radio-input label {
  display: flex;
  justify-content: space-between;
  width: 210px;
  align-items: center;
}
.vtm20.sheet .radio-input label > button {
  flex-grow: 0;
  flex-shrink: 0;
}
.vtm20.sheet .radio-input label input {
  align-self: flex-end;
}
.vtm20.sheet .radio-input label > span {
  flex: 1 1 auto;
  padding: 0.2rem;
  display: flex;
  align-items: center;
}
.vtm20.sheet .primary ul > li:not(:last-child) > label > span {
  border-bottom: 1px solid #ddd;
}
.vtm20.sheet .radio-input label > span > span:first-of-type {
  flex: 1 1 auto;
  margin-right: 0.5rem;
}
.vtm20.sheet .radio-input label > span > span:last-of-type {
  flex: 0 0 auto;
  margin-top: 3px;
}
.vtm20.sheet input[type="radio"] {
    opacity: 0;
    width: 11px;
    height: 11px;
    cursor: pointer;
    position: relative;
    z-index: 1;
    margin: -9px;
    left: 6px;
    top: 0;
}
.vtm20.sheet input[type="radio"] + span::before {
  content: "";
  width: 10px;
  height: 10px;
  border-radius: 50%;
  border: 1px solid #aaa;
  display: inline-block;
  background: #333;
}
.vtm20.sheet input[type="radio"]:checked ~ input[type="radio"] + span::before {
  background: #fdfdfd;
}
.vtm20.sheet .input-min-0 input[type="radio"]:first-of-type + span {
  position: relative;
  opacity: 0;
}
.vtm20.sheet .radio-input:hover input[type="radio"]:first-of-type + span {
  opacity: 1;
}
.vtm20.sheet .input-min-0 input[type="radio"]:first-of-type + span::before {
  background: none;
}
.vtm20.sheet .input-min-0 input[type="radio"]:first-of-type + span::after {
  content: '+';
  background: none;
  font-size: 19px;
  font-family: sans-serif;
  font-weight: bold;
  color: #aaa;
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%,-50%)rotate(45deg);
 }

.vtm20.sheet .attribute-roll-button,
.vtm20.sheet .ability-roll-button {
  background: transparent;
  border: none;
  padding: 0;
  margin: 0;
  font-size: 13px;
  flex: 0 0 13px;
  line-height: 13px;
  color: #777;
  opacity: 0;
  box-shadow: none;
}

.vtm20.sheet .attribute-roll-button:hover,
.vtm20.sheet .ability-roll-button:hover {
  color: #333;
}

.vtm20.sheet .selected .attribute-roll-button,
.vtm20.sheet .radio-input:hover .attribute-roll-button,
.vtm20.sheet .roll-status-1 .radio-input:hover .ability-roll-button,
.vtm20.sheet .roll-status-2 .radio-input:hover .ability-roll-button {
  opacity: 1;
  cursor: pointer;
}

.vtm20.sheet .attribute-label,
.vtm20.sheet .roll-status-1 .ability-label,
.vtm20.sheet .roll-status-2 .ability-label,
.vtm20.sheet .selectable .ability-label {
  cursor: pointer;
}

.vtm20.sheet .attribute-label:hover,
.vtm20.sheet .roll-status-1 .ability-label:hover,
.vtm20.sheet .roll-status-2 .ability-label:hover {
  text-shadow: 0 0 4px #808080;
}

.vtm20.sheet .selected .attribute-label,
.vtm20.sheet .selected .ability-label {
  text-shadow: 0 0 4px #e22c00;
}

/* difficulty dialog */
.vtm20.sheet .difficulty-dialog {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: none;
  justify-content: center;
  align-items: center;
  background: rgba(0, 0, 0, 0.2);
  z-index: 2;
}
.vtm20.sheet .difficulty-dialog > div {
  background: white;
  padding: 2rem;
  text-align: center;
  border: 1px solid black;
}

/* difficulty dialog active */
.vtm20.sheet .roll-status-2 > .primary {
  position: relative;
}
.vtm20.sheet .roll-status-2 .difficulty-dialog {
  display: flex;
}


.vtm20.item.sheet {
  background: none;
}
.vtm20.item.sheet .columns {
  display: flex;
  justify-content: space-evenly;
}
.vtm20.item.sheet .description {
  height: 150px;
}

